--- a/ubiquity/chrome/content/test.css
+++ b/ubiquity/chrome/content/test.css
@@ -3,10 +3,49 @@
  */
 
 body{
-	background:#272727;
-	color:#BFBFBF;
-	font-size:11px;
-	font-family:"Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, Arial, sans-serif;
+	background: #FFF;
+	color:#111;
+	font-size:13px;
+	font-family: "Helvetica", Verdana, Arial, sans-serif;
+	max-width: 900px;
+	border-top: 3px solid black;
+}
+
+.col-two{
+  width: 225px;
+  float: left;
+}
+
+.col-three{
+  width: 315px;
+  margin-right: 20px;
+  float: left;
+}
+
+.light{
+  color: #ccc;
+  font-style: italic;
+}
+
+
+h1{
+  color: #E21E26;
+  font-variant: small-caps;  
+}
+
+h4{
+  font-variant: small-caps;
+}
+
+h2{
+  border-top: 1px solid black;
+  padding-top: 5px;
+  font-variant: small-caps;
+}
+
+em{
+  color: #66bb00;
+  font-style: normal;
 }
 
 div.command{
@@ -42,7 +81,7 @@ div.command .description{
 }
 
 a, a:visited {
-    color: #FFFFFF;
+    color: #CC6600;
     text-decoration: none;
 }
 
