Renamed CmdUtils.getLocation() to CmdUtils.getGeoLocation() for clarity.

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -83,7 +83,7 @@ li {
   font-weight: bold;
   background-color: white;
   color: black;
-  text-align: center;
+  text-align: left;
   color: grey;
   font-variant: small-caps;
   font-size: 14pt;
