--- a/ubiquity/chrome/content/templates/map.html
+++ b/ubiquity/chrome/content/templates/map.html
@@ -8,7 +8,7 @@
     </script>
     <script src="http://www.google.com/uds/api?file=uds.js&amp;v=1.0" type="text/javascript"></script>
     <script src="http://www.google.com/uds/solutions/localsearch/gmlocalsearch.js" type="text/javascript"></script>    
-    <script src="../jquery-1.2.3.min.js"></script>
+    <script src="resource://ubiquity-scripts/jquery-1.2.3.min.js"></script>
     <script src="../utils.js"></script>
     <script src="../cmdutils.js"></script>
     <style>
