Added an alert on the welcome page for #146 if the user has 'clear private browsing history' enabled.

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -170,3 +170,13 @@ a:hover {
 .error {
   color:#FF0000;
 }
+
+.alert {
+  color:#FFFFFF;
+  background:#FF0000;
+}
+
+.alert a {
+  color:#FFFFFF;
+  text-decoration: underline;
+}
