Added view-source option to the command feed list in about:ubiquity; auto-updated feeds are distinguished from frozen ones.

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -180,3 +180,8 @@ a:hover {
   color:#FFFFFF;
   text-decoration: underline;
 }
+
+.feed-action:visited, .feed-action, .feed-action:hover {
+  color: #aaaaaa;
+  text-decoration: none;
+}
