--- a/ubiquity/chrome/content/templates/weather.html
+++ b/ubiquity/chrome/content/templates/weather.html
@@ -5,6 +5,7 @@ img {float: left; }
 </style>
 
 <div class="weather">
+  Weather For ${location}<br />
   <img src='${w.img}'/>
   <div class="temp">
     {if w.temp_units == "fahrenheit"} 
