Applied dims' patch for #240. Google preview shows "no results found" in the preview when no results are found.

--- a/ubiquity/chrome/content/templates/google-search.html
+++ b/ubiquity/chrome/content/templates/google-search.html
@@ -6,4 +6,6 @@
   <xul:description class="gresult-content">${result.content}</xul:description>
   <div class="gresult-url">${result.visibleUrl}</div>
 </div>
+{forelse}
+  <b>Your search - ${searchTerm} - did not match any documents. </b>
 {/for}
