Reorganised possible actions in command editor. Moved external editor preference from about:ubiquity to command editor page.

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -206,3 +206,9 @@ a:hover {
   font-size: 8pt;
   color: #009900;
 }
+
+.notification {
+  color: blue;
+  font-variant: small-caps;
+  font-size: 15pt;
+}
