Applied FreakCERS's patch that integrates CodeMirror into the command editor.

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -212,3 +212,5 @@ a:hover {
   font-variant: small-caps;
   font-size: 15pt;
 }
+
+div#editor-div iframe {border: 1px black solid !important; clear: both; margin: 1em auto;}
