--- a/ubiquity/standard-feeds/templates/map.html
+++ b/ubiquity/standard-feeds/templates/map.html
@@ -110,8 +110,8 @@
     </style>
 
     <script type="text/javascript">
-    // This API key is for https://people.mozilla.com/~araskin only
-    var API_KEY = "ABQIAAAAO0oNFUXoUNx4MuxcPwakNhQBK8TPUEk0el8QiBSofqVEVTeNhBTUla4_AlmyCXJzGsQ4qPg8HLpUlw";
+    // This API key is for https://people.mozilla.com/ only
+    var API_KEY = "ABQIAAAAO0oNFUXoUNx4MuxcPwakNhR3yUCx-o6JvWtDFa7jNOakHN7MrBSTsaKtGJjaVMeVURIpTa3cD1qNfA";
 
     google.load('search', '1');
     google.load('maps', '2');
