Changed the name of the setPreview() callback in content HTML previews to Ubiquity.onPreview(), for clarity.

--- a/ubiquity/standard-feeds/templates/map.html
+++ b/ubiquity/standard-feeds/templates/map.html
@@ -358,7 +358,7 @@
       
       
  
-    function setPreview(searchTerm) {
+    Ubiquity.onPreview = function setPreview(searchTerm) {
 
       loadMap(searchTerm, 0);
 
