Moved to a non-minified version of jQuery since it's always loaded locally, and upgraded to jQuery 1.2.6, which resolves #312.

--- a/ubiquity/standard-feeds/templates/map.html
+++ b/ubiquity/standard-feeds/templates/map.html
@@ -8,7 +8,7 @@
     <script id="google-jsapi"
             src="http://www.google.com/jsapi?key=ABQIAAAAGZ11mh1LzgQ8-8LRW3wEShR3yUCx-o6JvWtDFa7jNOakHN7MrBQxdoZFJjRzQzvdQfkXYwGOUnmXKQ"
     ></script>
-    <script src="resource://ubiquity-scripts/jquery.min.js"></script>
+    <script src="resource://ubiquity-scripts/jquery.js"></script>
     <script src="resource://ubiquity-scripts/content-preview.js"></script>
     <style>
 
