Fixed a bug where the address list didn't get emptied when new preview text was passed into it (via Ubiquity.onPreview).

--- a/ubiquity/standard-feeds/templates/map.html
+++ b/ubiquity/standard-feeds/templates/map.html
@@ -246,6 +246,8 @@
         $("#preview-pane").html("<div>No results for '" + searchTerm + "'</div>");
         return;
       }
+      
+      $("#address-list").empty();
       var searchWell = document.getElementById("address-list");
 
       gCurrentResults = [];
@@ -359,9 +361,7 @@
       
  
     Ubiquity.onPreview = function setPreview(searchTerm) {
-
       loadMap(searchTerm, 0);
-
     }
         
     </script>
