--- a/ubiquity/standard-feeds/templates/map.html
+++ b/ubiquity/standard-feeds/templates/map.html
@@ -125,10 +125,6 @@
     var mapControl;
     var mapType;
 
-    // this div is inserted to make sure the DOMSubtreeModified event fires
-    // put this into DOM whenever we need the preview-pane to resize (better method would be nice)
-    var hackDiv = document.createElement("div");
-
     function showAddressPreview() {
       if (document.getElementById("preview-pane-large"))
         document.getElementById("preview-pane-large").id = "preview-pane";
@@ -148,9 +144,7 @@
       gMap.removeControl(mapType);
       gMap.disableDragging();
       
-      // forces the preview pane to resize based on these contents (in cmdutils.js)
-      document.getElementById("map").appendChild(hackDiv);
-      
+      Ubiquity.resizePreview(document.getElementsByName("preview-pane")[0].clientHeight);
       
       // this animation doesn't work since the preview pane size has to be changed from cmdutils.js
       /* $("#preview-pane")
@@ -192,9 +186,8 @@
         $(".map-actions").fadeIn();
         $(".suggestion").slideUp( 500 );    
       }, 300 );
-      
-      // forces the preview pane to resize based on these contents (in cmdutils.js)
-      document.getElementById("map").appendChild(hackDiv);
+
+      Ubiquity.resizePreview(document.getElementsByName("preview-pane")[0].clientHeight);
       
       if (document.getElementById("map"))
         document.getElementById("map").id = "map-large";
