Fix for Ticket 367 - Command feed list in about:ubiquity needs better layout
Note: Cloned the same css for the graveyard <ul>'s as well.

--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -245,8 +245,19 @@ ul a:active.button {
   background-position: 0 -22px;
 }
 
+ul#command-feeds {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul#command-feeds li {
+  padding-bottom: .5em;
+}
+
 ul#command-feeds ul {
   list-style: none;
+  padding-left: 20px;
 }
 
 ul#command-feeds ul:after {
@@ -260,6 +271,7 @@ ul#command-feeds ul:after {
 ul#command-feeds ul li {
   float: left;
   white-space: nowrap;
+  padding-bottom: 0;
 }
 
 ul#command-feeds ul li:after {
@@ -267,5 +279,42 @@ ul#command-feeds ul li:after {
 }
 
 ul#command-feeds ul li:last-child:after {
+  content: "";
+}
+
+ul#command-feed-graveyard {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+ul#command-feed-graveyard li {
+  padding-bottom: .5em;
+}
+
+ul#command-feed-graveyard ul {
+  list-style: none;
+  padding-left: 20px;
+}
+
+ul#command-feed-graveyard ul:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+ul#command-feed-graveyard ul li {
+  float: left;
+  white-space: nowrap;
+  padding-bottom: 0;
+}
+
+ul#command-feed-graveyard ul li:after {
+  content: ",";
+}
+
+ul#command-feed-graveyard ul li:last-child:after {
   content: "";
 }
