Combined metadata with single CSS file for skins.

--- a/ubiquity/chrome/skin/skins/default.css
+++ b/ubiquity/chrome/skin/skins/default.css
@@ -1,3 +1,14 @@
+/*
+  =skin=
+  @name Default
+  @author Yatrik Solanki
+  @homepage http://www.yatriksolanki.com
+  @email yatriksolanki@gmail.com
+  @license MPL/LGPL/GPL
+  =/skin=
+*/
+
+
 /* Formatting for the Ubiquity Pop-Up */
 /* MAJOR TODO: Name all elements and classes so as to prevent 
 styling webpages unintentionally*/
