--- a/ubiquity/chrome/skin/skins/old.css
+++ b/ubiquity/chrome/skin/skins/old.css
@@ -1,3 +1,13 @@
+/*
+  =skin=
+//  @name 0.1 Skin
+//  @author Mozilla Labs
+//  @homepage http://labs.mozilla.com
+  @email abimanyuraja@gmail.com
+  @license MPL/LGPL/GPL
+  =/skin=
+*/
+
 /* formatting for ubiquity pop-up */
 /* MAJOR TODO: Name all elements and classes so as to prevent 
 styling webpages unintentionally*/
