--- a/ubiquity/chrome/content/web-content.css
+++ b/ubiquity/chrome/content/web-content.css
@@ -156,19 +156,18 @@ em{
   margin-left: 10px;
   color:#BFBFBF;
 }
+#skin-list .current-skin{
+  color: blue;
+  font-weight: 800;
+}
 
 #command-list .command .help{
   margin-top: 5px;
   color: #777;
 }
 
-#skin-preview{
-  float: right;
-  border: 1px solid #000;
-  width: 50%;
-  padding: 4px;
-  text-align: center;
-}
+
+
 #preview-image{
   border: 3px solid #000;
   padding: 2px;
