--- a/ubiquity/chrome/skin/skins/default.css
+++ b/ubiquity/chrome/skin/skins/default.css
@@ -13,8 +13,7 @@
 
 
 /* Formatting for the Ubiquity Pop-Up */
-/* MAJOR TODO: Name all elements and classes so as to prevent 
-styling webpages unintentionally*/
+
 
 #cmd-panel {
   padding: 0px;
@@ -53,56 +52,53 @@ styling webpages unintentionally*/
 }
 
 
-/* All CSS below comes from what used to be preview.css*/
-
 body#previewbody {
     margin: 0;
     padding: 0;
     color: #BBB;
 }
 
-#preview {
+#ubiquity-preview {
     width: 500px;
 }
 
 /* Formatting for the Preview box */
-/* help class is for the text " */
 
-.help {
+div#ubiquity-preview .help {
   font-family: Calibri, Helvetica, Verdana, Arial;
   font-size: 11pt;
   color: #FFF;
 }
 
-.gresult {
+div#ubiquity-preview .gresult {
   margin-bottom: 10px;
 }
 
-.gresult a {
+div#ubiquity-preview .gresult a {
   color: #FFFFFF;
   text-decoration: underline;
   font-size: 14pt;
   font-family: Calibri, Helvetica, Verdana, Arial;
   cursor: pointer;
 }
-.gresult-url {
+div#ubiquity-preview .gresult-url {
   font-size: x-small;
   font-family: Calibri, Helvetica, Verdana, Arial;
   color: #777;
 }
-.gresult-content {
+div#ubiquity-preview .gresult-content {
   margin-right: 10px;
   font-family: Calibri, Helvetica, Verdana, Arial;
   font-size: small;  
 }
 
-preview.img {
+div#ubiquity-preview.img {
     padding: 5px;
 }
 
 /* Formatting for the Preview Pane and Verb/Command suggestion list */
 
-#preview-pane {
+div#ubiquity-preview #preview-pane {
     color: #ffffff;
     background: transparent;
     padding-left: 15px;
@@ -114,12 +110,12 @@ preview.img {
 } 
 
 
-.hilited-text {
+div#ubiquity-preview .hilited-text {
     font-color: #FFF;
     font-family: Calibri, Helvetica, Verdana, Arial;
 }
 
-.hilited {
+div#ubiquity-preview .hilited {
     padding: 5px;
     margin: 2px;
     background: rgba(100%, 100%, 100%, 0.3);
@@ -128,7 +124,7 @@ preview.img {
 }
 
 
-.suggested {
+div#ubiquity-preview .suggested {
     margin: 2px;
     padding: 5px;
     border-left: solid 10px transparent;
@@ -136,15 +132,15 @@ preview.img {
     color: #FFF;
 }
 
-.needarg {
+div#ubiquity-preview .needarg {
     font-style: oblique;
     color: #999999;
 }
-.cmdicon {
+div#ubiquity-preview .cmdicon {
     display: inline-block;
     width: 16px;
 }
-.cmdicon img {
+div#ubiquity-preview .cmdicon img {
     vertical-align: middle;
     width: 16px;
     height: 16px;
