Fixed a CSS bug.

--- a/ubiquity/chrome/skin/skins/default.css
+++ b/ubiquity/chrome/skin/skins/default.css
@@ -111,7 +111,7 @@ div#ubiquity-preview #preview-pane {
 
 
 div#ubiquity-preview .hilited-text {
-    font-color: #FFF;
+    color: #FFF;
     font-family: Calibri, Helvetica, Verdana, Arial;
 }
 
