--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -19,7 +19,7 @@
   margin: 0px;
   background: white; /* Should be transparent. It's not due to rendering bugs on the Mac. */
   width: 800px;
-  /*opacity: .9;*/
+  opacity: .9;
 }
 
 #cmd-entry-container {
@@ -104,7 +104,6 @@ div#ubiquity-preview #suggestions {
   float: left;
   background-color: #969696;
   overflow: hidden;
-  
 }
 
 div#ubiquity-preview #preview-pane {
