Firefox was raising a warning telling me that 'none' wasn't a valid background-color in experimental.css, so I changed the declaration to be 'background: transparent'.  Hopefully this was an okay thing to do, and won't make the experimental skin look bizarre on non-OSX platforms. (I've only checked the change on OSX.)

--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -52,7 +52,7 @@ body#previewbody {
     margin: 0;
     padding: 0;
     color: #BBB;
-    background-color: none;
+    background: transparent;
 }
 
 #ubiquity-preview {
