Added the Mac specific css for the experimental skin. (There is a rendering bug that only effects transparent windows on Mac).
TODO: Atul will add the code that actually makes the magic work, with OS detection and all that jazz.

--- a/ubiquity/chrome/skin/skins/experimental.css
+++ b/ubiquity/chrome/skin/skins/experimental.css
@@ -17,7 +17,7 @@
 #cmd-panel {
   padding: 0px;
   margin: 0px;
-  background: white; /* Should be transparent. It's not due to rendering bugs on the Mac. */
+  background: transparent; /* On Mac this is changed to white, due to a rendering bug. */
   width: 800px;
   opacity: .9;
 }
